Upgrade project to use ,  using openrewrite.